--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ img {
 
 .focus {
   font-weight: 900;
-  /* text-shadow: rgb(163, 164, 182) 2px 1px; */
 }
 
 .main-shadow {
@@ -312,7 +311,7 @@ header .btn-navbar {
   }
 }
 
-.catalogo-main img {
+.catalogo img {
   max-width: 60%;
   max-height: 600px;
   filter: brightness(90%);
@@ -320,18 +319,18 @@ header .btn-navbar {
   padding: 0.2rem;
   border: 1px solid white;
 }
-.catalogo-main img:hover {
+.catalogo img:hover {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
 @media (min-width: 768px) {
-  .catalogo-main img {
+  .catalogo img {
     min-height: 350px;
     max-width: 200px;
     margin-left: 1rem;
     margin-bottom: 0;
   }
 }
-.catalogo-main span {
+.catalogo span {
   border: 1px rgba(255, 255, 255, 0.452) solid;
   border-radius: 5px;
   padding: 0.2rem;
@@ -340,32 +339,24 @@ header .btn-navbar {
   margin: 0 auto;
   margin-bottom: 1rem;
 }
-.catalogo-main span:hover {
+.catalogo span:hover {
   filter: brightness(150%);
   transform: scale(1.1);
   box-shadow: 0 2px 4px 0 rgba(255, 255, 255, 0.2), 0 3px 10px 0 rgba(255, 255, 255, 0.19);
 }
-.catalogo-main h3 {
+.catalogo h3 {
   margin-bottom: 1.1rem;
 }
-
-.catalogo-gyc-vestidos,
-.catalogo-gorros-y-carteras,
-.catalogo-h2,
-.lo-mas-vendido,
-.compra-por-genero {
+.catalogo-productos, .catalogo-gorros-y-carteras, .catalogo-h2, .catalogo-lo-mas-vendido, .catalogo .compra-por-genero {
   margin-bottom: 3.5rem;
   padding: 0.4rem;
 }
-
-.lo-mas-vendido,
-.catalogo-gorros-y-carteras,
-.catalogo-gyc-vestidos {
+.catalogo-lo-mas-vendido, .catalogo-gorros-y-carteras, .catalogo-productos {
   border-bottom: 1px white solid;
 }
 
 @media (min-width: 768px) {
-  .lo-mas-vendido div,
+  .catalogo-lo-mas-vendido div,
   .compra-por-genero div {
     display: flex;
     justify-content: space-evenly;
@@ -376,26 +367,26 @@ header .btn-navbar {
     flex-direction: column;
     justify-content: space-evenly;
   }
-  .div-gorros-y-carteras {
+  .catalogo-gorros-y-carteras-div {
     display: flex;
     margin-bottom: 2rem;
     justify-content: space-evenly;
   }
 }
 @media (min-width: 1200px) {
-  .lo-mas-vendido div {
+  .catalogo-lo-mas-vendido div {
     justify-content: space-around;
   }
-  .lo-mas-vendido img {
+  .catalogo-lo-mas-vendido img {
     margin: 0;
   }
-  .catalogo-gyc-vestidos {
+  .catalogo-productos {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  .catalogo-gorros-y-carteras,
-  .catalogo-vestidos {
+  .catalogo-productos .catalogo-gorros-y-carteras,
+  .catalogo-productos .catalogo-vestidos {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -521,6 +512,16 @@ header .btn-navbar {
   }
 }
 
+.contacto-socials, .contacto-formulario, .contacto-comunicate {
+  border: #eee solid 1px;
+}
+.contacto h3 {
+  text-align: center;
+}
+.contacto ul {
+  margin-bottom: 0;
+  padding-left: 0;
+}
 .contacto-title {
   background-image: url(../img/lugar2.jpg);
   width: 100%;
@@ -538,41 +539,42 @@ header .btn-navbar {
   font-weight: bold;
   padding: 2rem 0;
 }
-
-.socials-contacto ul li a:hover {
+@media (min-width: 1200px) {
+  .contacto-title h2 {
+    font-size: 2.5rem;
+  }
+}
+.contacto-socials ul li a:hover {
   filter: brightness(200%);
 }
-
-.main-contacto h3 {
-  text-align: center;
-}
-
-.main-contacto ul {
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
-.seccion-1-contacto,
-.socials-contacto {
+.contacto-seccion-1, .contacto-socials {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
 }
+@media (min-width: 1200px) {
+  .contacto-socials, .contacto-formulario, .contacto-comunicate {
+    border: none;
+  }
+  .contacto-seccion-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 1px solid white;
+    padding: 1rem;
+    width: fit-content;
+    border-radius: 10px;
+  }
+}
 
 .contacto-title,
-.formulario-contacto,
-.seccion-1-contacto,
-.socials-contacto,
-.comunicate-cn,
+.contacto-formulario,
+.contacto-seccion-1,
+.contacto-socials,
+.contacto-comunicate,
 .encontranos {
   padding: 1rem;
   margin-bottom: 1.5rem;
-}
-
-.socials-contacto,
-.formulario-contacto,
-.comunicate-cn {
-  border: #eee solid 1px;
 }
 
 .encontranos span {
@@ -580,7 +582,6 @@ header .btn-navbar {
   flex-direction: column;
   align-items: center;
 }
-
 @media (min-width: 768px) {
   .encontranos iframe {
     display: flex;
@@ -588,34 +589,23 @@ header .btn-navbar {
   }
 }
 @media (min-width: 1200px) {
-  .contacto-title h2 {
-    font-size: 2.5rem;
-  }
-  .socials-contacto,
-  .formulario-contacto,
-  .comunicate-cn {
-    border: none;
-  }
-  .main-contacto h3 {
-    text-align: start;
-  }
-  .seccion-1-contacto {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    border: 1px solid white;
-  }
-  .encontranos h3 {
-    text-align: center;
-  }
-  .seccion-1-contacto,
   .encontranos {
     padding: 1rem;
     width: fit-content;
     border-radius: 10px;
   }
 }
-.nosotros-title {
+
+.nosotros-title,
+.ropa-a-mano-texto,
+.como-empezo,
+.descubrir-mas-nosotros,
+.descubrir-mas-haciendo-la-ropa {
+  margin-bottom: 2.5rem;
+  padding: 0.5rem;
+}
+
+.main-nosotros .nosotros-title {
   background-image: url(../img/lugar5.jpg);
   width: 100%;
   background-repeat: no-repeat;
@@ -628,31 +618,18 @@ header .btn-navbar {
   font-family: "Courier New", sans-serif;
   color: #eee;
 }
-
-.ropa-a-mano {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 1rem;
-}
-
-.ropa-a-mano img {
-  max-height: 600px;
-  max-width: 100%;
-  border: #eee 1px solid;
-  border-radius: 5px;
-  padding: 0.1rem;
-}
-
-.main-nosotros h2 {
+.main-nosotros .nosotros-title h2 {
   font-size: 3.5rem;
   font-weight: 700;
 }
-
+@media (min-width: 1200px) {
+  .main-nosotros .nosotros-title h2 {
+    margin: 2.7rem auto;
+  }
+}
 .main-nosotros h3 {
   text-align: center;
 }
-
 .main-nosotros span {
   display: flex;
   flex-direction: column;
@@ -661,16 +638,89 @@ header .btn-navbar {
   margin-bottom: 1rem;
 }
 
-.nosotros-title,
-.texto-ropa-a-mano,
-.como-empezo,
-.nosotros-descubre-mas,
-.haciendo-la-ropa {
-  margin-bottom: 2.5rem;
-  padding: 0.5rem;
+.ropa-a-mano {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+}
+.ropa-a-mano img {
+  max-height: 600px;
+  max-width: 100%;
+  border: #eee 1px solid;
+  border-radius: 5px;
+  padding: 0.1rem;
+}
+@media (min-width: 768px) {
+  .ropa-a-mano {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 1rem;
+    line-height: 1.6rem;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  .ropa-a-mano-div {
+    max-width: 31%;
+  }
+  .ropa-a-mano-div img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .ropa-a-mano-texto p {
+    font-size: 0.9rem;
+  }
+}
+@media (min-width: 1200px) {
+  .ropa-a-mano-div {
+    max-width: 21%;
+  }
 }
 
-.nosotros-descubre-mas div {
+@media (min-width: 768px) {
+  .como-empezo iframe {
+    display: flex;
+    margin: 0.5rem auto;
+  }
+}
+@media (min-width: 1200px) {
+  .como-empezo {
+    display: grid;
+    grid-template-columns: 65% 35%;
+    grid-template-rows: 100%;
+    margin: 6rem auto;
+    background-color: #252d33;
+  }
+  .como-empezo > :nth-child(odd) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: start;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .como-empezo > :nth-child(0n+1) {
+    align-items: start;
+    font-size: 3rem;
+  }
+}
+
+.div-nosotros {
+  line-height: 0;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.div-nosotros a strong {
+  display: inline-block;
+  color: rgb(213, 255, 96);
+}
+.div-nosotros a strong:hover {
+  filter: brightness(95%);
+  transform: scale(1.1);
+}
+
+.descubrir-mas-nosotros div {
   margin-bottom: 1.5rem;
   text-align: center;
   border: #eee 1px solid;
@@ -680,97 +730,32 @@ header .btn-navbar {
   margin: 2rem auto;
   max-width: 400px;
 }
-
-.div-nosotros {
-  line-height: 0;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.div-nosotros a strong {
-  display: inline-block;
-  color: rgb(213, 255, 96);
-}
-
-.div-nosotros a strong:hover {
-  filter: brightness(95%);
-  transform: scale(1.1);
-}
-
 @media (min-width: 768px) {
-  .nosotros-title h2 {
-    margin: 1.5rem auto;
-  }
-  .ropa-a-mano {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 1rem;
-    line-height: 1.6rem;
-    margin: 0 auto;
-  }
-  .div-ropa-a-mano {
-    max-width: 31%;
-  }
-  .div-ropa-a-mano img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .texto-ropa-a-mano p {
-    font-size: 0.9rem;
-  }
-  .como-empezo iframe {
-    display: flex;
-    margin: 0.5rem auto;
-  }
-  .nosotros-descubre-mas img {
-    max-height: 360px;
-  }
-  .nosotros-descubre-mas {
+  .descubrir-mas-nosotros {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 1rem;
   }
-  .nosotros-descubre-mas :nth-child(3) {
+  .descubrir-mas-nosotros img {
+    max-height: 360px;
+  }
+  .descubrir-mas-nosotros > :nth-child(0n+3) {
     grid-column: span 2;
     display: flex;
     flex-direction: column;
   }
-  .nosotros-descubre-mas :nth-child(n) {
+  .descubrir-mas-nosotros > :nth-child(n) {
     margin: 0.2rem auto;
   }
-  .haciendo-la-ropa iframe {
+}
+@media (min-width: 768px) {
+  .descubrir-mas-haciendo-la-ropa iframe {
     display: flex;
     margin: 1rem auto;
   }
 }
 @media (min-width: 1200px) {
-  .nosotros-title h2 {
-    margin: 2.7rem auto;
-  }
-  .div-ropa-a-mano {
-    max-width: 21%;
-  }
-  .como-empezo {
-    display: grid;
-    grid-template-columns: 65% 35%;
-    grid-template-rows: 100%;
-    margin: 6rem auto;
-    background-color: #252d33;
-  }
-  .como-empezo :nth-child(odd) {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    text-align: start;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .como-empezo :nth-child(1) {
-    align-items: start;
-    font-size: 3rem;
-  }
   .descubrir-mas {
     display: flex;
     flex-direction: column;
@@ -778,14 +763,14 @@ header .btn-navbar {
     border-top: none;
     margin-bottom: 3rem;
   }
-  .nosotros-descubre-mas {
-    display: flex;
-  }
-  .nosotros-descubre-mas div {
-    border: none;
-  }
   .descubrir-mas img {
     border-radius: 10px;
+  }
+  .descubrir-mas-nosotros {
+    display: flex;
+  }
+  .descubrir-mas-nosotros div {
+    border: none;
   }
 }
 
