--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,103 +1,99 @@
-.contacto-title {
-  background-image: url(../img/lugar2.jpg);
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  text-align: center;
-  width: 100%;
-  padding: 25px;
-  font-family: $ff-couriernew;
-  color: #eee;
+.contacto {
 
-  & h2 {
-    font-size: 1.7rem;
-    font-weight: bold;
-    padding: 2rem 0;
+  &-socials,
+  &-formulario,
+  &-comunicate {
+    border: #eee solid 1px;
+  }
+
+  & h3 {
+    text-align: center;
+  }
+
+  & ul {
+    margin-bottom: 0;
+    padding-left: 0;
+  }
+
+  &-title {
+    background-image: url(../img/lugar2.jpg);
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+    width: 100%;
+    padding: 25px;
+    font-family: $ff-couriernew;
+    color: #eee;
+
+    & h2 {
+      font-size: 1.7rem;
+      font-weight: bold;
+      padding: 2rem 0;
+
+      @include mq-xl {
+        font-size: 2.5rem;
+      }
+    }
+  }
+
+  &-socials ul li a:hover {
+    filter: brightness(200%);
+  }
+
+  &-seccion-1,
+  &-socials {
+    @include flex-column();
+    margin: 0 auto;
+  }
+
+  @include mq-xl {
+
+    &-socials,
+    &-formulario,
+    &-comunicate {
+      border: none;
+    }
+
+    &-seccion-1 {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      border: 1px solid white;
+      padding: 1rem;
+      width: fit-content;
+      border-radius: 10px;
+    }
   }
 }
 
-
-.socials-contacto ul li a:hover {
-  filter: brightness(200%);
-}
-
-.main-contacto h3 {
-  text-align: center;
-}
-
-.main-contacto ul {
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
-.seccion-1-contacto,
-.socials-contacto {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-}
-
 .contacto-title,
-.formulario-contacto,
-.seccion-1-contacto,
-.socials-contacto,
-.comunicate-cn,
+.contacto-formulario,
+.contacto-seccion-1,
+.contacto-socials,
+.contacto-comunicate,
 .encontranos {
   padding: 1rem;
   margin-bottom: 1.5rem;
 }
 
-.socials-contacto,
-.formulario-contacto,
-.comunicate-cn {
-  border: #eee solid 1px;
-}
-
-.encontranos span {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-@media (min-width: 768px) {
-
-  .encontranos iframe {
-    display: flex;
-    margin: 0 auto;
+.encontranos {
+  & span {
+    @include flex-column();
+    align-items: center;
   }
 
-}
+  @include mq-md {
 
-@media (min-width: 1200px) {
-
-  .contacto-title h2 {
-    font-size: 2.5rem;
+    & iframe {
+      display: flex;
+      margin: 0 auto;
+    }
   }
 
-  .socials-contacto,
-  .formulario-contacto,
-  .comunicate-cn {
-    border: none;
-  }
+  @include mq-xl {
 
-  .main-contacto h3 {
-    text-align: start;
-  }
-
-  .seccion-1-contacto {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    border: 1px solid white;
-  }
-
-  .encontranos h3 {
-    text-align: center;
-  }
-
-  .seccion-1-contacto,
-  .encontranos {
     padding: 1rem;
     width: fit-content;
     border-radius: 10px;
