--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,196 +1,208 @@
-.nosotros-title {
-  background-image: url(../img/lugar5.jpg);
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: 31% 50%;
-  text-align: center;
-  width: 100%;
-  padding: 3.5rem 0;
-  font-family: $ff-couriernew;
-  color: #eee;
-}
-
-.ropa-a-mano {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 1rem;
-}
-
-.ropa-a-mano img {
-  max-height: 600px;
-  max-width: 100%;
-  border: #eee 1px solid;
-  border-radius: 5px;
-  padding: 0.1rem;
-}
-
-.main-nosotros h2 {
-  font-size: 3.5rem;
-  font-weight: 700;
-}
-
-.main-nosotros h3 {
-  text-align: center;
-}
-
-.main-nosotros span {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 0.7rem;
-  margin-bottom: 1rem;
-}
-
 .nosotros-title,
-.texto-ropa-a-mano,
+.ropa-a-mano-texto,
 .como-empezo,
-.nosotros-descubre-mas,
-.haciendo-la-ropa {
+.descubrir-mas-nosotros,
+.descubrir-mas-haciendo-la-ropa {
   margin-bottom: 2.5rem;
   padding: 0.5rem;
 }
 
-.nosotros-descubre-mas div {
-  margin-bottom: 1.5rem;
-  text-align: center;
-  border: #eee 1px solid;
-  border-radius: 1rem;
-  border-top: none;
-  padding: 2rem;
-  margin: 2rem auto;
-  max-width: 400px;
-}
+.main-nosotros {
 
-.div-nosotros {
-  line-height: 0;
-  margin-bottom: 1rem;
-  text-align: center;
-}
+  & .nosotros-title {
+    background-image: url(../img/lugar5.jpg);
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 31% 50%;
+    text-align: center;
+    width: 100%;
+    padding: 3.5rem 0;
+    font-family: $ff-couriernew;
+    color: #eee;
 
-.div-nosotros a strong {
-  display: inline-block;
-  color: rgb(213, 255, 96);
-}
+    & h2 {
+      font-size: 3.5rem;
+      font-weight: 700;
 
-.div-nosotros a strong:hover {
-  filter: brightness(95%);
-  transform: scale(1.1);
-}
-
-@media (min-width: 768px) {
-
-  .nosotros-title h2 {
-    margin: 1.5rem auto;
+      @include mq-xl {
+        margin: 2.7rem auto;
+      }
+    }
   }
 
-  .ropa-a-mano {
+  & h3 {
+    text-align: center;
+  }
+
+  & span {
+    @include flex-column();
+    align-items: center;
+    font-size: 0.7rem;
+    margin-bottom: 1rem;
+  }
+}
+
+
+.ropa-a-mano {
+  @include flex-column();
+  align-items: center;
+  margin: 1rem;
+
+  & img {
+    max-height: 600px;
+    max-width: 100%;
+    border: #eee 1px solid;
+    border-radius: 5px;
+    padding: 0.1rem;
+  }
+
+  @include mq-md {
+
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 1rem;
     line-height: 1.6rem;
     margin: 0 auto;
-  }
-
-  .div-ropa-a-mano {
-    max-width: 31%;
-  }
-
-  .div-ropa-a-mano img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .texto-ropa-a-mano p {
-    font-size: 0.9rem;
-  }
-
-  .como-empezo iframe {
-    display: flex;
-    margin: 0.5rem auto;
-  }
-
-  .nosotros-descubre-mas img {
-    max-height: 360px;
-  }
-
-  .nosotros-descubre-mas {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     gap: 1rem;
+
+    &-div {
+      max-width: 31%;
+
+      & img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+
+    &-texto p {
+      font-size: 0.9rem;
+    }
   }
 
-  .nosotros-descubre-mas :nth-child(3) {
-    grid-column: span 2;
-    display: flex;
-    flex-direction: column;
-  }
+  @include mq-xl {
 
-  .nosotros-descubre-mas :nth-child(n) {
-    margin: 0.2rem auto;
-  }
-
-  .haciendo-la-ropa iframe {
-    display: flex;
-    margin: 1rem auto;
+    &-div {
+      max-width: 21%;
+    }
   }
 }
 
-@media (min-width: 1200px) {
+.como-empezo {
 
-  .nosotros-title h2 {
-    margin: 2.7rem auto;
+  @include mq-md {
+
+    & iframe {
+      display: flex;
+      margin: 0.5rem auto;
+    }
   }
 
-  .div-ropa-a-mano {
-    max-width: 21%;
-  }
-
-
-  .como-empezo {
+  @include mq-xl {
     display: grid;
     grid-template-columns: 65% 35%;
     grid-template-rows: 100%;
     margin: 6rem auto;
     background-color: $second-bg-color;
+
+    > :nth-child(odd) {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      text-align: start;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    > :nth-child(0n+1) {
+      align-items: start;
+      font-size: 3rem;
+    }
+
+  }
+}
+
+.div-nosotros {
+  line-height: 0;
+  margin-bottom: 1rem;
+  text-align: center;
+
+  & a strong {
+    display: inline-block;
+    color: rgb(213, 255, 96);
+
+    &:hover {
+      filter: brightness(95%);
+      transform: scale(1.1);
+    }
+  }
+}
+
+.descubrir-mas {
+
+  &-nosotros {
+    & div {
+      margin-bottom: 1.5rem;
+      text-align: center;
+      border: #eee 1px solid;
+      border-radius: 1rem;
+      border-top: none;
+      padding: 2rem;
+      margin: 2rem auto;
+      max-width: 400px;
+    }
+
+    @include mq-md {
+
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 1rem;
+
+      & img {
+        max-height: 360px;
+      }
+
+      > :nth-child(0n+3) {
+        grid-column: span 2;
+        @include flex-column();
+      }
+
+      > :nth-child(n) {
+        margin: 0.2rem auto;
+      }
+    }
   }
 
-  .como-empezo :nth-child(odd) {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    text-align: start;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  &-haciendo-la-ropa {
+
+    @include mq-md {
+
+      & iframe {
+        display: flex;
+        margin: 1rem auto;
+      }
+    }
   }
 
-  .como-empezo :nth-child(1) {
-    align-items: start;
-    font-size: 3rem;
-  }
-
-
-  .descubrir-mas {
-    display: flex;
-    flex-direction: column;
+  @include mq-xl {
+    @include flex-column();
     border: white 1px solid;
     border-top: none;
     margin-bottom: 3rem;
-  }
 
-  .nosotros-descubre-mas {
-    display: flex;
-  }
+    & img {
+      border-radius: 10px;
+    }
 
-  .nosotros-descubre-mas div {
-    border: none;
-  }
+    &-nosotros {
+      display: flex;
 
-  .descubrir-mas img {
-    border-radius: 10px;
+      & div {
+        border: none;
+      }
+    }
   }
 }
