--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ header .btn-navbar {
   grid-template-columns: auto;
   grid-template-rows: auto auto auto;
   grid-auto-flow: dense;
-  background-color: rgba(133, 133, 133, 0.767);
+  background-color: rgb(133, 133, 133);
   padding: 1rem;
   text-align: center;
   grid-gap: 2rem;
@@ -129,13 +129,12 @@ header .btn-navbar {
 .footer-div img {
   height: 55px;
 }
-.footer-div div p {
+.footer-div-parrafo {
+  color: rgb(0, 0, 0);
+  font-weight: 600;
   text-align: center;
   grid-row-start: 3;
   grid-row-end: 4;
-}
-.footer-div-parrafo {
-  color: #181f23;
 }
 .footer-div-socials {
   justify-self: center;
@@ -645,7 +644,7 @@ header .btn-navbar {
   margin: 1rem;
 }
 .ropa-a-mano img {
-  max-height: 600px;
+  max-height: 400px;
   max-width: 100%;
   border: #eee 1px solid;
   border-radius: 5px;
@@ -662,19 +661,13 @@ header .btn-navbar {
     gap: 1rem;
   }
   .ropa-a-mano-div {
-    max-width: 31%;
+    max-width: 100%;
   }
   .ropa-a-mano-div img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: fit-content;
   }
   .ropa-a-mano-texto p {
     font-size: 0.9rem;
-  }
-}
-@media (min-width: 1200px) {
-  .ropa-a-mano-div {
-    max-width: 21%;
   }
 }
 
