--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,7 +3,7 @@
   grid-template-columns: auto;
   grid-template-rows: auto auto auto;
   grid-auto-flow: dense;
-  background-color: rgba(133, 133, 133, 0.767);
+  background-color: rgb(133, 133, 133);
   padding: 1rem;
   text-align: center;
   grid-gap: 2rem;
@@ -12,14 +12,12 @@
     height: 55px;
   }
 
-  & div p {
+  &-parrafo {
+    color: rgb(0, 0, 0);
+    font-weight: 600;
     text-align: center;
     grid-row-start: 3;
     grid-row-end: 4;
-  }
-
-  &-parrafo {
-    color: $main-bg-color;
   }
 
   &-socials {
