--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -51,7 +51,7 @@
   margin: 1rem;
 
   & img {
-    max-height: 600px;
+    max-height: 400px;
     max-width: 100%;
     border: #eee 1px solid;
     border-radius: 5px;
@@ -69,23 +69,15 @@
     gap: 1rem;
 
     &-div {
-      max-width: 31%;
+      max-width: 100%;
 
       & img {
-        max-width: 100%;
-        max-height: 100%;
+        max-width: fit-content;
       }
     }
 
     &-texto p {
       font-size: 0.9rem;
-    }
-  }
-
-  @include mq-xl {
-
-    &-div {
-      max-width: 21%;
     }
   }
 }
