se agrego meta description y meta title a todas las paginas

--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -17,15 +17,9 @@
 
   &-title {
     background-image: url(../img/lugar2.jpg);
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    text-align: center;
-    width: 100%;
-    padding: 25px;
     font-family: $ff-couriernew;
     color: #eee;
+    @include header-img();
 
     & h2 {
       font-size: 1.7rem;
