--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
   background: #181f23;
   color: rgb(240, 237, 237);
   scroll-behavior: smooth;
+  font-display: swap;
 }
 
 p {
@@ -128,6 +129,7 @@ header .btn-navbar {
 }
 .footer-div img {
   height: 55px;
+  width: auto;
 }
 .footer-div-parrafo {
   color: rgb(0, 0, 0);
@@ -195,22 +197,23 @@ header .btn-navbar {
 
 .titulo-h1 {
   background-image: url(../img/womantitle2.jpg);
+  background-position: 50% 50%;
+  margin-bottom: 1.5rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-position: 50% 50%;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   width: 100%;
-  min-height: 18rem;
-  padding: 1.7rem;
-  background-color: rgba(77, 74, 74, 0.164);
-  margin-bottom: 1.5rem;
+  padding: 3.5rem 0;
+  max-height: 25vh;
+  min-height: 15.5rem;
 }
 @media (min-width: 1200px) {
   .titulo-h1 {
-    background-position: top;
+    background-position: 20% 20%;
   }
   .titulo-h1 h1 {
     font-size: 3.6rem;
@@ -411,16 +414,19 @@ header .btn-navbar {
 
 .novedades1 {
   background-image: url(../img/womanhorizontal.jpg);
-  width: 100%;
+  background-position: 70% 50%;
+  font-family: "Courier New", sans-serif;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-position: 70% 50%;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 100%;
-  padding: 5rem 0;
-  font-family: "Courier New", sans-serif;
+  padding: 3.5rem 0;
+  max-height: 25vh;
+  min-height: 15.5rem;
 }
 .novedades1-h2 {
   font-weight: 900;
@@ -523,15 +529,19 @@ header .btn-navbar {
 }
 .contacto-title {
   background-image: url(../img/lugar2.jpg);
-  width: 100%;
+  font-family: "Courier New", sans-serif;
+  color: #eee;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  padding: 25px;
-  font-family: "Courier New", sans-serif;
-  color: #eee;
+  padding: 3.5rem 0;
+  max-height: 25vh;
+  min-height: 15.5rem;
 }
 .contacto-title h2 {
   font-size: 1.7rem;
@@ -606,16 +616,20 @@ header .btn-navbar {
 
 .main-nosotros .nosotros-title {
   background-image: url(../img/lugar5.jpg);
-  width: 100%;
+  background-position: 31% 50%;
+  font-family: "Courier New", sans-serif;
+  color: #eee;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-position: 31% 50%;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 3.5rem 0;
-  font-family: "Courier New", sans-serif;
-  color: #eee;
+  max-height: 25vh;
+  min-height: 15.5rem;
 }
 .main-nosotros .nosotros-title h2 {
   font-size: 3.5rem;
