--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -18,6 +18,7 @@ body {
   background: $main-bg-color;
   color: $main-color-text;
   scroll-behavior: smooth;
+  font-display: swap;
 }
 
 p {
@@ -91,6 +92,20 @@ img {
 .containerb {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+@mixin header-img($flex-direction: row) {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: $flex-direction;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 3.5rem 0;
+  max-height: 25vh;
+  min-height: 15.5rem;
 }
 
 @mixin flex-column() {
