--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./components/header";
 @import "./components/footer";
 @import "./components/searchbarbutton";
+@import "./components/buttonprincipal";
 
 @import "./pages/index";
 @import "./pages/catalogo";
