--- a/scss/pages/_catalogo.scss
+++ b/scss/pages/_catalogo.scss
@@ -23,19 +23,7 @@
   }
 
   & span {
-    border: 1px rgba(255, 255, 255, 0.452) solid;
-    border-radius: 5px;
-    padding: 0.2rem;
-    border-top: none;
-    width: fit-content;
-    margin: 0 auto;
-    margin-bottom: 1rem;
-
-    &:hover {
-      filter: brightness(150%);
-      transform: scale(1.1);
-      box-shadow: $main-text-boxshadow;
-    }
+    @include button-de-compra();
   }
 
   & h3 {
