--- a/css/styles.css
+++ b/css/styles.css
@@ -26,14 +26,18 @@ a {
   color: rgb(240, 237, 237);
 }
 
-h1 {
-  font-size: 2.5rem;
-  font-family: "Courier New", sans-serif;
-  font-weight: 900;
-  text-align: center;
+input,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
 }
 
-h2 {
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+.h1-subpages {
   text-align: center;
   padding: 0.5rem;
   margin-top: 1rem;
@@ -70,7 +74,7 @@ img {
 }
 
 .cards {
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.1s ease-in-out;
 }
 .cards:hover {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
@@ -214,6 +218,12 @@ header .btn-navbar {
   max-height: 25vh;
   min-height: 15.5rem;
 }
+.titulo-h1 h1 {
+  font-size: 2.5rem;
+  font-family: "Courier New", sans-serif;
+  font-weight: 900;
+  text-align: center;
+}
 @media (min-width: 1200px) {
   .titulo-h1 {
     background-position: 20% 20%;
@@ -352,10 +362,11 @@ header .btn-navbar {
   transform: scale(1.1);
   box-shadow: 0 2px 4px 0 rgba(255, 255, 255, 0.2), 0 3px 10px 0 rgba(255, 255, 255, 0.19);
 }
+.catalogo h2,
 .catalogo h3 {
   margin-bottom: 1.1rem;
 }
-.catalogo-productos, .catalogo-gorros-y-carteras, .catalogo-h2, .catalogo-lo-mas-vendido, .catalogo .compra-por-genero {
+.catalogo-productos, .catalogo-gorros-y-carteras, .catalogo .h1-subpages, .catalogo-lo-mas-vendido, .catalogo .compra-por-genero {
   margin-bottom: 3.5rem;
   padding: 0.4rem;
 }
@@ -406,7 +417,7 @@ header .btn-navbar {
 .main-novedades img {
   width: 100%;
 }
-.main-novedades h3 {
+.main-novedades h2 {
   font-weight: 600;
   text-shadow: 1px 1px rgba(238, 238, 238, 0.4745098039);
 }
@@ -434,7 +445,7 @@ header .btn-navbar {
   max-height: 25vh;
   min-height: 15.5rem;
 }
-.novedades1-h2 {
+.novedades1-h1 {
   font-weight: 900;
   font-size: 3.5em;
   color: #eaf7ff;
@@ -493,18 +504,39 @@ header .btn-navbar {
   margin: 0.5rem;
   margin-bottom: 1rem;
 }
+.ultimas-novedades #email {
+  padding: 0.7rem;
+  margin: 0.3rem;
+  border-radius: 1rem;
+  font-size: 1.1rem;
+  box-shadow: 0 0 15px 4px rgba(255, 255, 255, 0.078);
+  max-width: 100%;
+  background-color: #181f23;
+  color: #eee;
+  border: none;
+}
+.ultimas-novedades #email:focus {
+  box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.356);
+}
+.ultimas-novedades #email::placeholder {
+  color: #eee;
+  opacity: 0.93;
+}
 .ultimas-novedades-btn {
+  background-color: #181f23;
   display: inline-block;
   border: 1px white solid;
-  border-radius: 3px;
+  border-radius: 0.8rem;
   padding: 0.3rem;
   margin-left: 0.5rem;
   margin-bottom: 0;
+  transition: 0.4s;
 }
 .ultimas-novedades-btn:hover {
-  filter: brightness(200%);
-  transform: scale(103%);
-  border-radius: 5px;
+  transform: scale(1.08);
+  color: #252d33;
+  background-color: #faf9f9;
+  border: none;
 }
 @media (min-width: 768px) {
   .ultimas-novedades {
@@ -520,11 +552,9 @@ header .btn-navbar {
   }
 }
 
-.contacto-socials, .contacto-formulario, .contacto-comunicate {
+.contacto-socials, .contacto-textform, .contacto-comunicate {
   border: #eee solid 1px;
-}
-.contacto h3 {
-  text-align: center;
+  border-radius: 0.5rem;
 }
 .contacto ul {
   margin-bottom: 0;
@@ -546,29 +576,72 @@ header .btn-navbar {
   max-height: 25vh;
   min-height: 15.5rem;
 }
-.contacto-title h2 {
+.contacto-title h1 {
   font-size: 1.7rem;
   font-weight: bold;
   padding: 2rem 0;
 }
 @media (min-width: 1200px) {
-  .contacto-title h2 {
+  .contacto-title h1 {
     font-size: 2.5rem;
   }
+}
+.contacto-form input[type=text],
+.contacto-form input[type=email],
+.contacto-form textarea {
+  padding: 0.7rem;
+  margin: 0.2rem;
+  border-radius: 1rem;
+  font-size: 0.9rem;
+  box-shadow: 0 0px 8px 1px rgba(68, 68, 68, 0.356);
+  max-width: 100%;
+  background-color: #252d33;
+  color: #eee;
+  border: none;
+  resize: none;
+}
+.contacto-form input[type=text]:focus,
+.contacto-form input[type=email]:focus,
+.contacto-form textarea:focus {
+  box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.356);
+}
+.contacto-form #enviar {
+  display: inline-block;
+  border-radius: 0.8rem;
+  padding: 0.3rem;
+  transition: 0.4s;
+  border: none;
+  color: #eee;
+  background-color: #252d33;
+  box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.527);
+}
+.contacto-form #enviar:hover {
+  color: #252d33;
+  background-color: #faf9f9;
+  outline: none;
+  border: none;
+  box-shadow: 0 0px 8px 1px rgba(68, 68, 68, 0.356);
 }
 .contacto-socials ul li a:hover {
   filter: brightness(200%);
 }
 .contacto-seccion-1, .contacto-socials {
+  max-width: 700px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
 }
+.contacto-socials {
+  border: none;
+  background-color: #252d33;
+  border-radius: 1rem;
+  box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.527);
+}
 @media (min-width: 1200px) {
-  .contacto-socials, .contacto-formulario, .contacto-comunicate {
+  .contacto-socials, .contacto-textform, .contacto-comunicate {
     border: none;
   }
-  .contacto-seccion-1 {
+  .contacto-seccion-1, .contacto-socials {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -576,11 +649,20 @@ header .btn-navbar {
     padding: 1rem;
     width: fit-content;
     border-radius: 10px;
+    max-width: 100%;
+  }
+  .contacto-socials {
+    display: flex;
+    flex-direction: column;
+    box-shadow: none;
+    background-color: #181f23;
+    border: none;
+    justify-content: start;
   }
 }
 
 .contacto-title,
-.contacto-formulario,
+.contacto-textform,
 .contacto-seccion-1,
 .contacto-socials,
 .contacto-comunicate,
@@ -589,6 +671,9 @@ header .btn-navbar {
   margin-bottom: 1.5rem;
 }
 
+.encontranos h3 {
+  text-align: center;
+}
 .encontranos span {
   display: flex;
   flex-direction: column;
@@ -634,15 +719,16 @@ header .btn-navbar {
   max-height: 25vh;
   min-height: 15.5rem;
 }
-.main-nosotros .nosotros-title h2 {
+.main-nosotros .nosotros-title h1 {
   font-size: 3.5rem;
   font-weight: 700;
 }
 @media (min-width: 1200px) {
-  .main-nosotros .nosotros-title h2 {
+  .main-nosotros .nosotros-title h1 {
     margin: 2.7rem auto;
   }
 }
+.main-nosotros h2,
 .main-nosotros h3 {
   text-align: center;
 }
@@ -660,7 +746,9 @@ header .btn-navbar {
   align-items: center;
   margin: 1rem;
 }
-.ropa-a-mano img {
+.ropa-a-mano-div img {
+  display: flex;
+  margin: 0 auto;
   max-height: 400px;
   max-width: 100%;
   border: #eee 1px solid;
@@ -749,6 +837,10 @@ header .btn-navbar {
   }
   .descubrir-mas-nosotros img {
     max-height: 360px;
+    cursor: pointer;
+  }
+  .descubrir-mas-nosotros span {
+    text-align: start;
   }
   .descubrir-mas-nosotros > :nth-child(0n+3) {
     grid-column: span 2;
