--- a/scss/pages/_catalogo.scss
+++ b/scss/pages/_catalogo.scss
@@ -26,13 +26,14 @@
     @include button-de-compra();
   }
 
-  & h3 {
+  & h2,
+  h3 {
     margin-bottom: 1.1rem;
   }
 
   &-productos,
   &-gorros-y-carteras,
-  &-h2,
+  & .h1-subpages,
   &-lo-mas-vendido,
   & .compra-por-genero {
     margin-bottom: 3.5rem;
