--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,13 +1,10 @@
 .contacto {
 
   &-socials,
-  &-formulario,
+  &-textform,
   &-comunicate {
     border: #eee solid 1px;
-  }
-
-  & h3 {
-    text-align: center;
+    border-radius: .5rem;
   }
 
   & ul {
@@ -21,7 +18,7 @@
     color: #eee;
     @include header-img();
 
-    & h2 {
+    & h1 {
       font-size: 1.7rem;
       font-weight: bold;
       padding: 2rem 0;
@@ -32,23 +29,75 @@
     }
   }
 
+  &-form {
+
+    & input[type="text"],
+    input[type="email"],
+    textarea {
+      padding: .7rem;
+      margin: .2rem;
+      border-radius: 1rem;
+      font-size: .9rem;
+      box-shadow: 0 0px 8px 1px rgba(68, 68, 68, 0.356);
+      max-width: 100%;
+      background-color: $second-bg-color;
+      color: #eee;
+      border: none;
+      resize: none;
+
+      &:focus {
+        box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.356);
+      }
+    }
+
+    & #enviar {
+      display: inline-block;
+
+      border-radius: .8rem;
+      padding: 0.3rem;
+      transition: .4s;
+      border: none;
+      color: #eee;
+      background-color: $second-bg-color;
+      box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.527);
+
+      &:hover {
+        color: $second-bg-color;
+        background-color: #faf9f9;
+        outline: none;
+        border: none;
+        box-shadow: 0 0px 8px 1px rgba(68, 68, 68, 0.356);
+      }
+    }
+  }
+
   &-socials ul li a:hover {
     filter: brightness(200%);
   }
 
-  &-seccion-1,
-  &-socials {
+  &-seccion-1 {
+    max-width: 700px;
     @include flex-column();
     margin: 0 auto;
+  }
+
+  &-socials {
+    @extend .contacto-seccion-1;
+    border: none;
+    background-color: $second-bg-color;
+    border-radius: 1rem;
+    box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.527);
   }
 
   @include mq-xl {
 
     &-socials,
-    &-formulario,
+    &-textform,
     &-comunicate {
       border: none;
     }
+
+
 
     &-seccion-1 {
       display: flex;
@@ -58,21 +107,37 @@
       padding: 1rem;
       width: fit-content;
       border-radius: 10px;
+      max-width: 100%;
+    }
+
+    &-socials {
+      @include flex-column();
+      box-shadow: none;
+      background-color: $main-bg-color;
+      border: none;
+      justify-content: start;
     }
   }
 }
 
 .contacto-title,
-.contacto-formulario,
+.contacto-textform,
 .contacto-seccion-1,
 .contacto-socials,
 .contacto-comunicate,
 .encontranos {
   padding: 1rem;
+
   margin-bottom: 1.5rem;
+
 }
 
 .encontranos {
+
+  & h3 {
+    text-align: center
+  }
+
   & span {
     @include flex-column();
     align-items: center;
