--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -16,7 +16,7 @@
     color: #eee;
     @include header-img();
 
-    & h2 {
+    & h1 {
       font-size: 3.5rem;
       font-weight: 700;
 
@@ -26,7 +26,8 @@
     }
   }
 
-  & h3 {
+  & h2,
+  h3 {
     text-align: center;
   }
 
@@ -44,12 +45,17 @@
   align-items: center;
   margin: 1rem;
 
-  & img {
-    max-height: 400px;
-    max-width: 100%;
-    border: #eee 1px solid;
-    border-radius: 5px;
-    padding: 0.1rem;
+  &-div {
+
+    & img {
+      display: flex;
+      margin: 0 auto;
+      max-height: 400px;
+      max-width: 100%;
+      border: #eee 1px solid;
+      border-radius: 5px;
+      padding: 0.1rem;
+    }
   }
 
   @include mq-md {
@@ -149,6 +155,11 @@
 
       & img {
         max-height: 360px;
+        cursor: pointer;
+      }
+
+      & span {
+        text-align: start;
       }
 
       > :nth-child(0n+3) {
