--- a/scss/pages/_novedades.scss
+++ b/scss/pages/_novedades.scss
@@ -5,7 +5,7 @@
     width: 100%;
   }
 
-  & h3 {
+  & h2 {
     font-weight: 600;
     text-shadow: 1px 1px #eeeeee79;
   }
@@ -24,7 +24,7 @@
   font-family: $ff-couriernew;
   @include header-img($flex-direction: column);
 
-  &-h2 {
+  &-h1 {
     font-weight: 900;
     font-size: 3.5em;
     color: #eaf7ff;
@@ -89,18 +89,43 @@
   margin: 0.5rem;
   margin-bottom: 1rem;
 
+  #email {
+    padding: .7rem;
+    margin: .3rem;
+    border-radius: 1rem;
+    font-size: 1.1rem;
+    box-shadow: 0 0 15px 4px rgba(255, 255, 255, 0.078);
+    max-width: 100%;
+    background-color: $main-bg-color;
+    color: #eee;
+    border: none;
+
+    &:focus {
+      box-shadow: 0 0px 8px 1px rgba(255, 255, 255, 0.356);
+    }
+
+    &::placeholder {
+      color: #eee;
+      opacity: 0.93;
+    }
+  }
+
+
   &-btn {
+    background-color: $main-bg-color;
     display: inline-block;
     border: 1px white solid;
-    border-radius: 3px;
+    border-radius: .8rem;
     padding: 0.3rem;
     margin-left: 0.5rem;
     margin-bottom: 0;
+    transition: .4s;
 
     &:hover {
-      filter: brightness(200%);
-      transform: scale(103%);
-      border-radius: 5px;
+      transform: scale(1.08);
+      color: $second-bg-color;
+      background-color: #faf9f9;
+      border: none;
     }
   }
 
